updated nav to link back to ToC

--- a/scss/_toc-links.scss
+++ b/scss/_toc-links.scss
@@ -11,6 +11,7 @@
   transform: translateX(-50%);
   background-color: $color-chocolate-opaque-2;
   opacity: 0;
+  border-radius: 15px;
   transition: opacity 0.5s;
   @include respond(break-1600) {
     top: 10%;
