--- a/templates/partials/nav/topNav.html
+++ b/templates/partials/nav/topNav.html
@@ -10,6 +10,6 @@
     <a href="/index.html" class="topNav-title">Maxa Millennial Collections</a>
   </div>
   <div class="topNav-right">
-    <a href="https://panagram.work/" class="topNav-link">Panagram</a>
+    <a href="/index.html" class="topNav-link">Table of Contents</a>
   </div>
 </section>
