--- a/templates/partials/toc/toc.html
+++ b/templates/partials/toc/toc.html
@@ -35,10 +35,10 @@
     {% include "partials/toc/toc_fiction.html" %}
     <!--! CHAPTERS -->
     {% include "partials/toc/toc_chapters.html" %}
-    <!--! Nonfiction LF -->
-    {% include "partials/toc/toc_nonfiction-LF.html" %}
-    <!--! Nonfiction SF -->
-    <!-- {% include "partials/toc/toc_nonfiction-SF.html" %} -->
+    <!--! Nonfiction -->
+    {% include "partials/toc/toc_nonfiction.html" %}
+    <!-- ! Nonfiction SF -->
+    {% include "partials/toc/toc_theGreenerSide.html" %}
     <!--! Aphorisms  -->
     {% include "partials/toc/toc_aphorisms.html" %}
     <!--! Poetry -->
@@ -47,4 +47,4 @@
 </section>
 
 <!--! Greener Side Modals -->
-{% include "partials/toc/toc_modals.html" %}
+{% include "partials/toc/toc_theGreenerSideModals.html" %}
