--- a/templates/partials/toc/toc_aphorisms.html
+++ b/templates/partials/toc/toc_aphorisms.html
@@ -1,8 +1,9 @@
-<!--! Aphorisms -->
+<!-- ====== Aphorisms Container ====== -->
 <div
   class="toc-pieceLinks--aphorisms pointerEvents-none"
   id="toc-aphorismsDisplay"
 >
+  <!-- ====== ToC Mini Container ====== -->
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Aphorism List</div>
     <div class="miniContainer-header--close" id="aphorismClose">Close</div>
