--- a/templates/partials/toc/toc_chapters.html
+++ b/templates/partials/toc/toc_chapters.html
@@ -1,8 +1,9 @@
-<!--! CHAPTERS -->
+<!-- ====== Chapters Container ====== -->
 <div
   class="toc-pieceLinks--chapters pointerEvents-none"
   id="toc-chaptersDisplay"
 >
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/prologue.html"
     class="pieceLink pieceLink-chapter"
@@ -10,9 +11,11 @@
   >
     Prologue: A Meeting
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c0-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter1.html"
     class="pieceLink pieceLink-chapter"
@@ -20,9 +23,11 @@
   >
     Chapter 1: A Terminal Diagnosis
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c1-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter2.html"
     class="pieceLink pieceLink-chapter"
@@ -30,9 +35,11 @@
   >
     Chapter 2: Surviving the First Death
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c2-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter3.html"
     class="pieceLink pieceLink-chapter"
@@ -40,9 +47,11 @@
   >
     Chapter 3: Ego Death
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c3-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter4.html"
     class="pieceLink pieceLink-chapter"
@@ -50,9 +59,11 @@
   >
     Chapter 4: The Fight to Undermine
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c4-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter5.html"
     class="pieceLink pieceLink-chapter"
@@ -60,10 +71,11 @@
   >
     Chapter 5: My Brothers and Sisters
   </a>
+  <!-- Chapter After-Line -->
   <div class="pieceLink-afterLine" id="c5-line">
     <div class="pieceLink-afterLine--movingBlock"></div>
   </div>
-
+  <!-- Chapter Link -->
   <a
     href="/mm/chapters/chapter6.html"
     class="pieceLink pieceLink-chapter"
