--- a/templates/partials/toc/toc_fiction.html
+++ b/templates/partials/toc/toc_fiction.html
@@ -1,5 +1,6 @@
-<!--! FICTION -->
+<!-- ====== Fiction Container ====== -->
 <div class="toc-pieceLinks--fiction pointerEvents-none" id="toc-fictionDisplay">
+  <!-- Fiction Link -->
   <a
     href="/mm/fiction/mirrorInTheMirror.html"
     class="pieceLink pieceLink-fiction"
@@ -7,6 +8,7 @@
   >
     Mirror In the Mirror
   </a>
+  <!-- Fiction Link -->
   <a
     href="/mm/fiction/aChairToNowhere.html"
     class="pieceLink pieceLink-fiction"
@@ -14,6 +16,7 @@
   >
     A Chair to Nowhere
   </a>
+  <!-- Fiction Link -->
   <a
     href="/mm/fiction/aBishopsWatchdog.html"
     class="pieceLink pieceLink-fiction"
@@ -21,6 +24,7 @@
   >
     A Bishop's Watchdog
   </a>
+  <!-- Fiction Link -->
   <a
     href="/mm/fiction/theDoctorsApprentice.html"
     class="pieceLink pieceLink-fiction"
@@ -28,6 +32,7 @@
   >
     The Doctor's Apprentice
   </a>
+  <!-- Fiction Link -->
   <a
     href="/mm/fiction/politiciansOfTheFuture.html"
     class="pieceLink pieceLink-fiction"
