--- a/templates/partials/toc/toc_nonfiction.html
+++ b/templates/partials/toc/toc_nonfiction.html
@@ -1,7 +1,8 @@
-<!--! Longform Nonfiction -->
+<!-- ====== Nonfiction Container ====== -->
 <div class="toc-pieceLinks--LF pointerEvents-none" id="toc-LFDisplay">
   <div class="toc-set1--LF">
     <h3 class="header-LF">The Essays</h3>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/anEssayConcerningYou.html"
       class="pieceLink pieceLink-LF"
@@ -9,6 +10,7 @@
     >
       An Essay Concerning You
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/aTheoryOfAcknowledgement.html"
       class="pieceLink pieceLink-LF"
@@ -16,6 +18,7 @@
     >
       A Theory of Acknowledgement
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/assumptiveCritiques.html"
       class="pieceLink pieceLink-LF"
@@ -26,6 +29,7 @@
   </div>
   <div class="toc-set2--LF">
     <h3 class="header-LF">The Witness</h3>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/anAddictMeetsRachelBloom.html"
       class="pieceLink pieceLink-LF"
@@ -33,6 +37,7 @@
     >
       An Addict Meets Rachel Bloom
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/anAddictsDesperation.html"
       class="pieceLink pieceLink-LF"
@@ -40,6 +45,7 @@
     >
       An Addicts Desperation
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/theTimeIMetRachelBloom.html"
       class="pieceLink pieceLink-LF"
@@ -47,6 +53,7 @@
     >
       The Time I Met Rachel Bloom
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/aStrangersStranger.html"
       class="pieceLink pieceLink-LF"
@@ -54,6 +61,7 @@
     >
       A Stranger's Stranger
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/kingsSoConquered.html"
       class="pieceLink pieceLink-LF"
@@ -61,6 +69,7 @@
     >
       Kings So Conquered
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/theSonderer.html"
       class="pieceLink pieceLink-LF"
@@ -68,6 +77,7 @@
     >
       The Sonderer
     </a>
+    <!-- Nonfiction Link -->
     <a
       href="/mm/nonfiction/severed.html"
       class="pieceLink pieceLink-LF"
