--- a/templates/partials/toc/toc_poetry.html
+++ b/templates/partials/toc/toc_poetry.html
@@ -1,4 +1,4 @@
-<!--! Poetry -->
+<!-- ====== Poetry Container ====== -->
 <div class="toc-pieceLinks--poetry pointerEvents-none" id="toc-poetryDisplay">
   <div class="toc-miniContainer">
     <div class="miniContainer-header">Poem List</div>
