--- a/templates/partials/toc/toc_theGreenerSide.html
+++ b/templates/partials/toc/toc_theGreenerSide.html
@@ -1,4 +1,4 @@
-<!--! Shortform Nonfiction -->
+<!-- ====== The Greener Side Container ====== -->
 <div class="toc-pieceLinks--SF pointerEvents-none" id="toc-SFDisplay">
   <a href="#" class="pieceLink pieceLink-SF" id="sf4">Finding Zen</a>
   <div class="sf4-line">
