--- a/templates/partials/toc/toc_theGreenerSideModals.html
+++ b/templates/partials/toc/toc_theGreenerSideModals.html
@@ -1,4 +1,4 @@
-<!-- MODALS -->
+<!-- ====== The Greener Side Modals ====== -->
 <!-- FINDING ZEN -->
 <div class="modal" id="findingZen">
   <h5 class="modal-header">Finding Zen</h5>
@@ -20,7 +20,6 @@
     <div class="line-2"></div>
   </span>
 </div>
-
 <!-- INTO THE GRAY -->
 <div class="modal" id="intoTheGray">
   <h5 class="modal-header">Into the Gray</h5>
@@ -56,7 +55,6 @@
     <div class="line-2"></div>
   </span>
 </div>
-
 <!-- The Greener Side PT 1 -->
 <div class="modal" id="partOne">
   <h5 class="modal-header">The Greener Side - Part One</h5>
@@ -71,7 +69,6 @@
     <div class="line-2"></div>
   </span>
 </div>
-
 <!-- The Greener Side PT 2 -->
 <div class="modal" id="partTwo">
   <h5 class="modal-header">The Greener Side - Part Two</h5>
