--- a/css/style.css
+++ b/css/style.css
@@ -2543,6 +2543,7 @@ a {
   transform: translateX(-50%);
   background-color: rgba(67, 62, 60, 0.4);
   opacity: 0;
+  border-radius: 15px;
   transition: opacity 0.5s;
   /**============================================
    *             Mobile Small - 600
