--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -16,14 +16,14 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
-    <!-- BASE FONTS ======-->
+    <!--====== BASE FONTS ======-->
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
 
-    <!-- PAGE FONTS ======-->
+    <!--====== PAGE FONTS ======-->
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
       rel="stylesheet"
