Updated modal for landing page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,6 +25,7 @@
 @import 'toc-containers';
 @import 'toc-theGreenerSide';
 @import 'toc-modals';
+@import 'toc-landingModal';
 
 //JS Transitions
 @import 'javascript';
