--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,6 +41,7 @@
     <script src="/js/aphorisms.js"></script>
     <script src="/js/mediaQueries.js"></script>
     <script src="/js/tocModals.js"></script>
+    <script src="/js/tocLandingModal.js"></script>
     <!-- Default Statcounter code for My Writing Website http://maxamillennial.org
 -->
     <script type="text/javascript">
