--- a/templates/partials/toc/toc.html
+++ b/templates/partials/toc/toc.html
@@ -48,3 +48,6 @@
 
 <!--! Greener Side Modals -->
 {% include "partials/toc/toc_theGreenerSideModals.html" %}
+
+<!--! Landing Modal -->
+{% include "partials/toc/toc_landingModal.html" %}
