--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /**=======================================================================================================================
  **                                                    MAIN
  *=======================================================================================================================**/
@@ -242,6 +243,7 @@ a {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 3rem;
+    cursor: pointer;
     /**============================================
    *             Mobile Small - 600
 @include respond(break-600) {}
@@ -6494,6 +6496,193 @@ a {
     transform: scale(1.1); }
   100% {
     transform: scale(1); } }
+
+/**========================================================================
+ *                           TOC - LANDING MODAL 
+ *========================================================================**/
+/* modal */
+/* =============================================== */
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background: rgba(77, 77, 77, 0.8);
+  transition: all 0.5s; }
+
+/* using :target */
+.modal-container:target {
+  display: flex; }
+
+.modal-landing {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60rem;
+  padding: 4rem 2rem;
+  border-radius: 0.8rem;
+  background-color: #c7beba;
+  box-shadow: 0.4rem 0.4rem 2.4rem 0.2rem rgba(5, 7, 31, 0.3);
+  position: relative;
+  transition: all 0.5s;
+  overflow: hidden;
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1250) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1600
+   @include respond(break-greater-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+  @media (max-width: 53.125em) {
+    .modal-landing {
+      width: 45rem; } }
+
+.modal__details {
+  text-align: center;
+  margin-bottom: 4rem;
+  padding-bottom: 4rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.4); }
+
+.modal__title {
+  font-size: 4rem; }
+
+.modal__description {
+  margin-top: 2rem;
+  font-size: 1.7rem;
+  font-style: italic; }
+
+.modal__text {
+  padding: 0 4rem;
+  margin-bottom: 4rem;
+  font-size: 1.7rem;
+  line-height: 2; }
+
+.modal__text::before {
+  content: '';
+  position: absolute;
+  top: 0%;
+  left: 100%;
+  transform: translate(-50%, -50%);
+  width: 18rem;
+  height: 18rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 100rem;
+  pointer-events: none; }
+
+.modal__btn {
+  padding: 1rem 1.6rem;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: 100rem;
+  color: inherit;
+  background: transparent;
+  font-size: 1.4rem;
+  font-family: inherit;
+  letter-spacing: 0.2rem;
+  transition: 0.2s;
+  cursor: pointer; }
+
+.modal__btn:hover,
+.modal__btn:focus {
+  border-color: rgba(255, 255, 255, 0.6);
+  transform: translateY(-0.2rem); }
+
+/* links */
+/* =============================================== */
+.link-1 {
+  font-size: 1.8rem;
+  color: var(--light);
+  background: var(--background);
+  box-shadow: 0.4rem 0.4rem 2.4rem 0.2rem rgba(64, 72, 191, 0.3);
+  border-radius: 100rem;
+  padding: 1.4rem 3.2rem;
+  transition: 0.2s; }
+
+.link-1:hover,
+.link-1:focus {
+  transform: translateY(-0.2rem);
+  box-shadow: 0 0 4.4rem 0.2rem rgba(64, 72, 191, 0.4); }
+
+.link-2 {
+  width: 4rem;
+  height: 4rem;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: 100rem;
+  color: inherit;
+  font-size: 2.2rem;
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.2s; }
+
+.link-2::before {
+  content: '×';
+  transform: translateY(-0.1rem); }
+
+.link-2:hover,
+.link-2:focus {
+  border-color: rgba(255, 255, 255, 0.6);
+  transform: translateY(-0.2rem); }
+
+/* Second Version Link */
+/* =============================================== */
+.second-version-link,
+.second-version-link:link {
+  color: #4048bf;
+  padding: 0.8rem 1.6rem 0.8rem 0.2rem;
+  border-bottom: 2px solid #4048bf;
+  font-size: 1.4rem;
+  font-weight: bold;
+  position: absolute;
+  top: 4rem;
+  right: 4rem; }
+
+.second-version-link::after {
+  content: '\2197';
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 0.9em; }
+
+.abs-site-link {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 1.6rem; }
 
 /**========================================================================
  *                          JAVASCRIPT 
