--- a/scss/_topNav.scss
+++ b/scss/_topNav.scss
@@ -45,6 +45,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 3rem;
+    cursor: pointer;
 
     @include respond(break-1000) {
       font-size: 1.5rem;
