--- a/templates/partials/nav/topNav.html
+++ b/templates/partials/nav/topNav.html
@@ -7,7 +7,7 @@
       <div class="topNav-hamMenu--line" id="hamLine2"></div>
       <div class="topNav-hamMenu--line" id="hamLine3"></div>
     </div>
-    <a href="/index.html" class="topNav-title">Maxa Millennial Collections</a>
+    <p class="topNav-title">Maxa Millennial Collections</p>
   </div>
   <div class="topNav-right">
     <a href="/index.html" class="topNav-link">Table of Contents</a>
