--- a/scss/_topNav.scss
+++ b/scss/_topNav.scss
@@ -51,6 +51,10 @@
       font-size: 1.5rem;
       text-align: center;
     }
+    @include respond(break-600) {
+      position: static;
+      transform: translate(0, 0);
+    }
   }
 
   &-link {
