--- a/templates/partials/toc/toc_landingModal.html
+++ b/templates/partials/toc/toc_landingModal.html
@@ -3,20 +3,22 @@
     <div class="modal__details">
       <h1 class="modal__title">Welcome</h1>
       <p class="modal__description">
-        Below are some details about this project that will help navigate this
-        website.
+        Below are some details about this project that will help you navigate
+        this website.
       </p>
     </div>
 
     <p class="modal__text">
-      This website is a collection of writing and photography. Beyond this, all
-      the pieces as a whole make an argument about the self. It asks questions
-      like 'Who are we?' and 'Who are you?'
+      Maxamillennial.org is a collection of writing and photography. It's a
+      story that uses the individual to ask qestions about the self. Questions
+      like, 'Who are we?' or 'Who are you?'
     </p>
 
     <p class="modal__text">
-      Ultimately, there are more questions than answers here, but it's the
-      introspective self that sits at the core of all these ideas.
+      Ultimately, the intention of this work isn't to provide answers. Instead,
+      it's to show that these questions reflect on each of us differently, and
+      it's to explore the questions themselves with a hope, almost a need, to
+      find something deeper.
     </p>
 
     <a href="#modal-closed" class="link-2"></a>
