--- a/scss/_toc-landingModal.scss
+++ b/scss/_toc-landingModal.scss
@@ -35,6 +35,9 @@
   position: relative;
   transition: all 0.5s;
   overflow: hidden;
+  @include respond(break-1600) {
+    top: 55%;
+  }
   @include respond(break-850) {
     width: 45rem;
   }
@@ -64,8 +67,11 @@
 .modal__description {
   margin-top: 2rem;
 
-  font-size: 1.7rem;
+  font-size: 1.4rem;
   font-style: italic;
+  @include respond(break-850) {
+    font-size: 1.4rem;
+  }
 }
 
 .modal__text {
@@ -74,6 +80,9 @@
 
   font-size: 1.7rem;
   line-height: 2;
+  @include respond(break-850) {
+    font-size: 1.4rem;
+  }
   @include respond(break-600) {
     padding: 0 1rem;
   }
