fixed modal typo

--- a/templates/partials/toc/toc_landingModal.html
+++ b/templates/partials/toc/toc_landingModal.html
@@ -10,7 +10,7 @@
 
     <p class="modal__text">
       Maxamillennial.org is a collection of writing and photography. It's a
-      story that uses the individual to ask qestions about the self. Questions
+      story that uses the individual to ask questions about the self. Questions
       like, 'Who are we?' or 'Who are you?'
     </p>
 
