--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -39,5 +39,16 @@
     <!------- JAVASCRIPT ------->
     <script src="/js/topNav.js"></script>
     <script src="/js/smoothScroll.js"></script>
+    <script async src="//static.getclicky.com/101393515.js"></script>
+    <noscript>
+      <p>
+        <img
+          alt="Clicky"
+          width="1"
+          height="1"
+          src="//in.getclicky.com/101393515ns.gif"
+        />
+      </p>
+    </noscript>
   </body>
 </html>
